--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   "bugs": {
     "url": "https://github.com/owebboy/typographic-styles/issues"
   },
-  "homepage": "https://github.com/owebboy/typographic-styles"
+  "homepage": "https://github.com/owebboy/typographic-styles",
+  "devDependencies": {
+    "gulp-stylus": "~1.3.4",
+    "gulp": "~3.8.10",
+    "gulp-cssmin": "~0.1.6",
+    "gulp-rename": "~1.2.0",
+    "gulp-watch": "~1.2.0",
+    "gulp-webserver": "~0.8.7"
+  }
 }
