--- a/bower.json
+++ b/bower.json
@@ -1,4 +1,9 @@
 {
 	"name" : "typographiv-styles-website",
-	"version" : "1.2"
+	"version" : "1.2",
+	"dependencies" : {
+  	"new-buttons" : "latest",
+  	"o-simple-grid" : "latest",
+  	"typographic-styles" : "latest"
+	}
 }
